--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -21,12 +21,14 @@
     <header>
       <div class="container">
         <div>
-          <img src="images/logo.png" alt="logo" />
+          <a href="index.html" class="logo">
+            <img src="images/logo.png" alt="logo" />
+          </a>
         </div>
         <nav>
           <ul>
             <li>
-              <a href="#">Home</a>
+              <a href="index.html">Home</a>
             </li>
             <li>
               <a href="#">Services</a>
@@ -54,16 +56,14 @@
         <div class="banner-paragraph">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam.
+            eiusmod <br />
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam.
           </p>
         </div>
         <a href="#" class="watchintro">
           <i class="fa-solid fa-circle-play"></i>
           Watch Intro
-        </a>
-        <a href="#next-section" class="scrollDown">
-          <i class="fas fa-arrow-down"></i>
         </a>
       </div>
     </section>
@@ -115,84 +115,82 @@
 
     <section class="features">
       <div class="container">
-        <ul class="features-list">
-          <li class="feature-item">
-            <div class="feature-details">
-              <h6>Feature 1</h6>
-              <h3>Designed for Individuals</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt.
-              </p>
-              <ul>
-                <li>
-                  <i
-                    class="fa-regular fa-circle-check"
-                    style="color: #6c00ff"
-                  ></i>
-                  <span>Some cool features</span>
-                </li>
-                <li>
-                  <i
-                    class="fa-regular fa-circle-check"
-                    style="color: #6c00ff"
-                  ></i>
-                  <span>About the products</span>
-                </li>
-                <li>
-                  <i
-                    class="fa-regular fa-circle-check"
-                    style="color: #6c00ff"
-                  ></i>
-                  <span>Which will amazed you</span>
-                </li>
-              </ul>
+        <div class="feature-item">
+          <div class="feature-details">
+            <h6>Feature 1</h6>
+            <h3>Designed for Individuals</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt.
+            </p>
+            <ul>
+              <li>
+                <i
+                  class="fa-regular fa-circle-check"
+                  style="color: #6c00ff"
+                ></i>
+                <span>Some cool features</span>
+              </li>
+              <li>
+                <i
+                  class="fa-regular fa-circle-check"
+                  style="color: #6c00ff"
+                ></i>
+                <span>About the products</span>
+              </li>
+              <li>
+                <i
+                  class="fa-regular fa-circle-check"
+                  style="color: #6c00ff"
+                ></i>
+                <span>Which will amazed you</span>
+              </li>
+            </ul>
+          </div>
+          <div class="feature-image-border">
+            <div class="feature-image">
+              <img src="images/feature1.jpg" alt="feature1" />
             </div>
-            <div class="feature-image-border">
-              <div class="feature-image">
-                <img src="images/feature1.jpg" alt="feature1" />
-              </div>
+          </div>
+        </div>
+        <div class="feature-item">
+          <div class="feature-details">
+            <h6>Feature 1</h6>
+            <h3>Designed for big and small business</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt.
+            </p>
+            <ul>
+              <li>
+                <i
+                  class="fa-regular fa-circle-check"
+                  style="color: #6c00ff"
+                ></i>
+                <span>Some cool features</span>
+              </li>
+              <li>
+                <i
+                  class="fa-regular fa-circle-check"
+                  style="color: #6c00ff"
+                ></i>
+                <span>About the products</span>
+              </li>
+              <li>
+                <i
+                  class="fa-regular fa-circle-check"
+                  style="color: #6c00ff"
+                ></i>
+                <span>Which will amazed you</span>
+              </li>
+            </ul>
+          </div>
+          <div class="feature-image-border">
+            <div class="feature-image">
+              <img src="images/feature2.jpg" alt="feature2" />
             </div>
-          </li>
-          <li class="feature-item-flex">
-            <div class="feature-details">
-              <h6>Feature 1</h6>
-              <h3>Designed for big and small business</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt.
-              </p>
-              <ul>
-                <li>
-                  <i
-                    class="fa-regular fa-circle-check"
-                    style="color: #6c00ff"
-                  ></i>
-                  <span>Some cool features</span>
-                </li>
-                <li>
-                  <i
-                    class="fa-regular fa-circle-check"
-                    style="color: #6c00ff"
-                  ></i>
-                  <span>About the products</span>
-                </li>
-                <li>
-                  <i
-                    class="fa-regular fa-circle-check"
-                    style="color: #6c00ff"
-                  ></i>
-                  <span>Which will amazed you</span>
-                </li>
-              </ul>
-            </div>
-            <div class="feature-image-border">
-              <div class="feature-image">
-                <img src="images/feature2.jpg" alt="feature2" />
-              </div>
-            </div>
-          </li>
-        </ul>
+          </div>
+        </div>
       </div>
     </section>
 
