--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -53,7 +53,7 @@
           Perfect Landing Page <br />
           Design Tutorial
         </h1>
-        <div class="banner-paragraph">
+        <div class="bannerParagraph">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod <br />
@@ -61,7 +61,7 @@
             veniam.
           </p>
         </div>
-        <a href="#" class="watchintro">
+        <a href="#" class="watchIntro">
           <i class="fa-solid fa-circle-play"></i>
           Watch Intro
         </a>
@@ -72,10 +72,10 @@
       <div class="container">
         <h6>Services</h6>
         <h3>What we do</h3>
-        <ul class="services-list">
+        <ul class="servicesList">
           <li>
-            <div class="service-item">
-              <div class="service-icon">
+            <div class="serviceItem">
+              <div class="serviceIcon">
                 <i class="fa-solid fa-mobile" style="color: #ffffff"></i>
               </div>
               <h5>Mobile App Design</h5>
@@ -86,8 +86,8 @@
             </div>
           </li>
           <li>
-            <div class="service-item">
-              <div class="service-icon">
+            <div class="serviceItem">
+              <div class="serviceIcon">
                 <i class="fa-solid fa-desktop" style="color: #ffffff"></i>
               </div>
               <h5>Website Design</h5>
@@ -98,8 +98,8 @@
             </div>
           </li>
           <li>
-            <div class="service-item">
-              <div class="service-icon">
+            <div class="serviceItem">
+              <div class="serviceIcon">
                 <i class="fa-solid fa-cube" style="color: #ffffff"></i>
               </div>
               <h5>Package Design</h5>
@@ -115,8 +115,8 @@
 
     <section class="features">
       <div class="container">
-        <div class="feature-item">
-          <div class="feature-details">
+        <div class="featureItem">
+          <div class="featureDetails">
             <h6>Feature 1</h6>
             <h3>Designed for Individuals</h3>
             <p>
@@ -147,14 +147,14 @@
               </li>
             </ul>
           </div>
-          <div class="feature-image-border">
-            <div class="feature-image">
+          <div class="featureImageBorder">
+            <div class="featureImage">
               <img src="images/feature1.jpg" alt="feature1" />
             </div>
           </div>
         </div>
-        <div class="feature-item">
-          <div class="feature-details">
+        <div class="featureItem">
+          <div class="featureDetails">
             <h6>Feature 1</h6>
             <h3>Designed for big and small business</h3>
             <p>
@@ -185,8 +185,8 @@
               </li>
             </ul>
           </div>
-          <div class="feature-image-border">
-            <div class="feature-image">
+          <div class="featureImageBorder">
+            <div class="featureImage">
               <img src="images/feature2.jpg" alt="feature2" />
             </div>
           </div>
@@ -196,8 +196,8 @@
 
     <footer>
       <div class="container">
-        <div class="footer-content">
-          <div class="footer-logo">
+        <div class="footerContent">
+          <div class="footerLogo">
             <img src="images/logo2.png" alt="logo" />
           </div>
           <nav>
@@ -219,7 +219,7 @@
               </li>
             </ul>
           </nav>
-          <div class="footer-copy">
+          <div class="footerCopy">
             <p>Copyright &copy; 2023 Destiny Inc. All Rights Reserved.</p>
           </div>
         </div>
