--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -28,7 +28,7 @@
         <nav>
           <ul>
             <li>
-              <a href="index.html">Home</a>
+              <a href="index.html" class="active">Home</a>
             </li>
             <li>
               <a href="#">Services</a>
