--- a/Assignment4/index.html
+++ b/Assignment4/index.html
@@ -19,9 +19,12 @@
   <body>
     <header>
       <div class="container">
-        <h3>
-          <a href="#"> BrandName</a>
-        </h3>
+        <span>
+          <h3>
+            <a href="#"> BrandName</a>
+          </h3>
+          <i class="fa-solid fa-bars" style="color: #ffffff"></i>
+        </span>
         <nav>
           <ul class="navLinks">
             <li>
@@ -115,8 +118,9 @@
 
     <section class="industry">
       <div class="container">
-        <h2>Industry</h2>
         <div class="industryInfo">
+          <h2>What Clients Say</h2>
+
           <p>
             Problems trying to resolve the conflict between the
             <br />two major realms of Classical physics: Newtonian mechanics
